--- a/src/app/admin/make-certificate/make-certificate.component.css
+++ b/src/app/admin/make-certificate/make-certificate.component.css
@@ -11,11 +11,12 @@
   .container {
     display: flex;
     flex-direction: column;
-    font-size: 14pt;
-    justify-content: center;
-	  align-items: center;
-    margin-left: 10px;
     padding: 20px;
-    border-radius: 5px;
-    width: 450px;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  button {
+    margin-top: 5px
   }
