Add getting certificate data

--- a/src/app/admin/all-certificates/all-certificates.component.html
+++ b/src/app/admin/all-certificates/all-certificates.component.html
@@ -6,6 +6,10 @@
 
   <div class="tableDiv">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="alias">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Alias </th>
+        <td mat-cell *matCellDef="let element"> {{element.alias}} </td>
+      </ng-container>
 
       <ng-container matColumnDef="serial_number">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Serial number </th>
