Add service request calls

--- a/src/app/admin/all-certificates/all-certificates.component.html
+++ b/src/app/admin/all-certificates/all-certificates.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="button-container">
-    <button mat-raised-button color="primary">Check valitidy</button>
-    <button mat-raised-button color="warn">Revoke</button>
+    <button mat-raised-button color="primary" (click)="checkValidity(this.selectedCertificate)">Check valitidy</button>
+    <button mat-raised-button color="warn" (click)="revokeCertificate(this.selectedCertificate)">Revoke</button>
   </div>
 
   <div class="tableDiv">
