--- a/src/app/admin/all-certificates/all-certificates.component.css
+++ b/src/app/admin/all-certificates/all-certificates.component.css
@@ -12,10 +12,11 @@
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    max-width: 30%;
+    max-width: 40%;
     margin-left: 10px;
   }
   
   .button-container button {
     flex-basis: 45%;
+    margin-right: 10px;
   }
