--- a/src/app/admin/all-certificates/all-certificates.component.html
+++ b/src/app/admin/all-certificates/all-certificates.component.html
@@ -37,6 +37,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> End date </th>
             <td mat-cell *matCellDef="let element"> {{element.endDate | date:'dd/MM/yyyy'}} </td>
         </ng-container>
+      <ng-container matColumnDef="download">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Download</th>
+        <td mat-cell *matCellDef="let element"> <button id="bura" (click)="downl()">Download</button> </td>
+    </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.selected-row]="row === selectedCertificate" (click)="selectCert(row)"></tr>
