--- a/src/app/admin/accept-request/accept-request.component.css
+++ b/src/app/admin/accept-request/accept-request.component.css
@@ -1,47 +1,50 @@
 .user-table {
-    width: 80%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  .user-table th,
-  .user-table td {
-    padding: 10px;
-    text-align: left;
-    border: 1px solid #ccc;
-  }
-  
-  .user-table th {
-    background-color: #1a237e;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  .user-table tbody tr:nth-child(even) {
-    background-color: #e8eaf6;
-  }
-  
-  .user-table ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .user-table ul li {
-    margin-bottom: 5px;
-  }
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .accept-btn,
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: #439dac;
+}
+
+.user-table th,
+.user-table td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid #ccc;
+}
+
+.user-table th {
+  background-color: #0e424b;
+  color: white;
+  font-weight: bold;
+}
+
+.user-table tbody tr:nth-child(even) {
+  background-color: #00d9ff;
+}
+
+.user-table ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.user-table ul li {
+  margin-bottom: 5px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.accept-btn,
 .deny-btn {
   padding: 5px 10px;
-  background-color: #1565c0;
-  color: #fff;
+  background-color: #0e424b;
+  color: white;
   border: none;
   cursor: pointer;
   margin-right: 5px;
@@ -49,9 +52,9 @@
 
 .accept-btn:hover,
 .deny-btn:hover {
-  background-color: #0d47a1;
+  background-color: #00d9ff;
 }
-  
-  h1 {
-    text-align: center;
-  }
+
+h1 {
+  text-align: center;
+}
