--- a/src/app/auth/side-menu/side-menu.component.html
+++ b/src/app/auth/side-menu/side-menu.component.html
@@ -1,57 +1,52 @@
-<!-- <div class="side-menu" [@menuLoading]="true">
+ <div class="side-menu" [@menuLoading]="true">
     <div class="center-menu">
         <div class="item" style="margin-top: 7px" (click)="toggleBurger()">
             <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="menu"></mat-icon>
         </div>
-        <a [routerLink]="['']">
+        <!-- <a [routerLink]="['']">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Home icon" fontIcon="home"></mat-icon>
                 <div class="tooltip">Home</div>
             </div>
         </a>
-        <a [routerLink]="['/patient/feedback/create']" [hidden]="isHiddenLogout()">
+        <a>
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Feedback icon" fontIcon="feedback"></mat-icon>
                 <div class="tooltip">Give feedback</div>
             </div>
         </a>
-        <a [routerLink]="['/patient/appointment/step-by-step']" [hidden]="isHiddenLogout()">
+        <a >
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Schedule icon" fontIcon="schedule"></mat-icon>
                 <div class="tooltip">Schedule appointment</div>
             </div>
         </a>
-        <a [routerLink]="['/patient/myAppointments']" [hidden]="isHiddenLogout()">
+        <a >
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="healing icon"></mat-icon>
                 <div class="tooltip">My appointments</div>
             </div>
         </a>
-        <a [routerLink]="['/patient/finished']" [hidden]="isHiddenLogout()">
+        <a >
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="done"></mat-icon>
                 <div class="tooltip">Finished Appointments</div>
             </div>
-        </a>
+        </a> -->
     </div>
     <div class="bottom-menu">
-        <a [routerLink]="['user/register']" [hidden]="isHidden()">
+        <a [routerLink]="['/register']">
             <div class="item">
-                <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="register"></mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Register"></mat-icon>
                 <div class="tooltip">Register</div>
             </div>
         </a>
-        <a [routerLink]="['login']" [hidden]="isHidden()">
+        <a [routerLink]="['/login']" >
             <div class="item">
-                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="login"></mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Login"></mat-icon>
                 <div class="tooltip">Login</div>
             </div>
         </a>
-        <div class="item" (click)="onLogout()" [hidden]="isHiddenLogout()">
-            <mat-icon aria-hidden="false" class="mat-icon-rtl-mirror" aria-label="Example home icon"
-                fontIcon="logout"></mat-icon>
-            <div class="tooltip">Logout</div>
-        </div>
     </div>
 
 </div>
@@ -63,4 +58,4 @@
 <a routerLink="/doctor/blood-orders">Blood orders</a>
 <a routerLink="/doctor/blood-consumption">Blood consumption</a>
 <a routerLink="/doctor/consilium">Create consilium</a>
-<a (click)="onLogout()">Logout</a> --> -->
+<a (click)="onLogout()">Logout</a> -->
