--- a/src/app/manager/side-menu/side-menu.component.html
+++ b/src/app/manager/side-menu/side-menu.component.html
@@ -15,35 +15,35 @@
    <div class="bottom-menu">
     <a [routerLink]="['/engineer']"  [hidden]="isHiddenEngineer()">
         <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="done"></mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Engineer"></mat-icon>
             <div class="tooltip">Engineer</div>
         </div>
     </a>
     <a [routerLink]="['/hr']" [hidden]="isHiddenHr()">
         <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="done"></mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Hr"></mat-icon>
             <div class="tooltip">Hr</div>
         </div>
     </a>
     <a [routerLink]="['/admin']"  [hidden]="isHiddenAdmin()">
         <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="done"></mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Admin"></mat-icon>
             <div class="tooltip">Admin</div>
         </div>
     </a>
-        <a [routerLink]="['user/register']" [hidden]="isHidden()" >
+        <a [routerLink]="['/register']" [hidden]="isHidden()" >
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="login"></mat-icon>
                 <div class="tooltip">Register</div>
             </div>
         </a>
-        <a [routerLink]="['/auth/login']" [hidden]="isHidden()">
+        <a [routerLink]="['/login']" [hidden]="isHidden()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="login"></mat-icon>
                 <div class="tooltip">Login</div>
             </div>
         </a>
-        <a [routerLink]="['/auth/login']" (click)="logOut()" [hidden]="isHiddenLogout()">
+        <a [routerLink]="['/login']" (click)="logOut()" [hidden]="isHiddenLogout()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="logout"></mat-icon>
                 <div class="tooltip">Logout</div>
