--- a/src/app/manager/side-menu/side-menu.component.html
+++ b/src/app/manager/side-menu/side-menu.component.html
@@ -3,7 +3,7 @@
         <div class="item" style="margin-top: 7px" (click)="toggleBurger()">
             <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="menu"></mat-icon>
         </div>
-        <a [routerLink]="['/engineer']" [hidden]="isHiddenLogout()">
+        <a [routerLink]="['/manager']" [hidden]="isHiddenLogout()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Home icon" fontIcon="home"></mat-icon>
                 <div class="tooltip">Home</div>
