--- a/src/app/admin/all-certificates/all-certificates.component.html
+++ b/src/app/admin/all-certificates/all-certificates.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="whole-div">
   <div class="button-container">
     <button mat-raised-button color="primary" (click)="checkValidity(this.selectedCertificate)">Check valitidy</button>
     <button mat-raised-button color="warn" (click)="revokeCertificate(this.selectedCertificate)">Revoke</button>
