--- a/src/app/admin/create-permission/create-permission.component.html
+++ b/src/app/admin/create-permission/create-permission.component.html
@@ -1,11 +1,11 @@
 <div class="login-container">
     <h2>Create permission</h2>
-    <div class="login-form">
+    <form class="login-form">
       <label for="username">Permission name:</label>
       <input type="text" id="username" name="username" required>
   
       <button type="submit" (click)="addPermission()">Create</button>
-    </div>
+    </form>
   </div>
   
   
