--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,5 +8,7 @@
       <input type="password" id="password" name="password" required>
   
       <button type="submit" (click)="login()">Login</button>
+
     </form>
+    <button class="nav-button" (click)="goToPasswordless()">Magic Login</button>
   </div>
