Add id info to magic link

--- a/src/app/auth/side-menu/side-menu.component.html
+++ b/src/app/auth/side-menu/side-menu.component.html
@@ -47,6 +47,12 @@
                 <div class="tooltip">Login</div>
             </div>
         </a>
+        <a [routerLink]="['/passwordless']" >
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Magic login icon" fontIcon="Magic"></mat-icon>
+                <div class="tooltip">Magic login</div>
+            </div>
+        </a>
     </div>
 
 </div>
