edited design for admins

--- a/src/app/admin/side-menu/side-menu.component.html
+++ b/src/app/admin/side-menu/side-menu.component.html
@@ -49,7 +49,7 @@
             <div class="tooltip">Engineer</div>
         </div>
     </a>
-        <a [routerLink]="['register']" [hidden]="isHidden()" >
+        <a [routerLink]="['/register']" [hidden]="isHiddenLogout()" >
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="login"></mat-icon>
                 <div class="tooltip">Register</div>
