--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,12 +2,12 @@
     <h2>Login</h2>
     <form class="login-form" action="/login" method="POST">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" name="username" [(ngModel)]="username" required>
   
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" [(ngModel)]="password" required>
   
-      <button type="submit" (click)="login()">Login</button>
+      <button type="submit" (click)="login()" [disabled]="!(validateUsername() && validatePassword())">Login</button>
 
     </form>
   </div>
