--- a/src/app/admin/all-projects/all-projects.component.html
+++ b/src/app/admin/all-projects/all-projects.component.html
@@ -6,6 +6,7 @@
       <th>Start time</th>
       <th>End time</th>
       <th>Assign employee</th>
+      <th>View employees</th>
     </tr>
   </thead>
   <tbody>
@@ -15,6 +16,7 @@
       <td>{{ p.startTime }}</td>
       <td>{{ p.endTime }}</td>
       <td><button class="deny-btn"><mat-icon>assignment_ind</mat-icon></button></td>
+      <td><button class="deny-btn" (click)="viewEmployeesForProject(p)"><mat-icon>view_list</mat-icon></button></td>
     </tr>
   </tbody>
 </table>
