--- a/src/app/engineer/side-menu/side-menu.component.html
+++ b/src/app/engineer/side-menu/side-menu.component.html
@@ -9,30 +9,41 @@
                 <div class="tooltip">Home</div>
             </div>
         </a>
-      
-        
-    
+        <a [routerLink]="['/engineer/projects']" [hidden]="isHiddenLogout()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Projects icon" fontIcon="work"></mat-icon>
+                <div class="tooltip">Projects</div>
+            </div>
+        </a>
+        <a [routerLink]="['/engineer/info']" [hidden]="isHiddenLogout()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Profile icon" fontIcon="person"></mat-icon>
+                <div class="tooltip">Profile</div>
+            </div>
+        </a>
+
+
     </div>
-   <div class="bottom-menu">
-    <a [routerLink]="['/manager']"  [hidden]="isHiddenManager()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Manager"></mat-icon>
-            <div class="tooltip">Manager</div>
-        </div>
-    </a>
-    <a [routerLink]="['/hr']" [hidden]="isHiddenHr()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Hr"></mat-icon>
-            <div class="tooltip">Hr</div>
-        </div>
-    </a>
-    <a [routerLink]="['/admin']"  [hidden]="isHiddenAdmin()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Admin"></mat-icon>
-            <div class="tooltip">Admin</div>
-        </div>
-    </a>
-        <a [routerLink]="['/register']" [hidden]="isHidden()" >
+    <div class="bottom-menu">
+        <a [routerLink]="['/manager']" [hidden]="isHiddenManager()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Manager"></mat-icon>
+                <div class="tooltip">Manager</div>
+            </div>
+        </a>
+        <a [routerLink]="['/hr']" [hidden]="isHiddenHr()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Hr"></mat-icon>
+                <div class="tooltip">Hr</div>
+            </div>
+        </a>
+        <a [routerLink]="['/admin']" [hidden]="isHiddenAdmin()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Admin"></mat-icon>
+                <div class="tooltip">Admin</div>
+            </div>
+        </a>
+        <a [routerLink]="['/register']" [hidden]="isHidden()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="login"></mat-icon>
                 <div class="tooltip">Register</div>
@@ -50,17 +61,8 @@
                 <div class="tooltip">Logout</div>
             </div>
         </a>
-        
-        
+
+
     </div>
 
 </div>
-
-<!-- <a routerLink="/doctor">Home</a>
-<a routerLink="/doctor/appointments">Appointments</a>
-<a [routerLink]="'/doctor/records'">Records</a>
-<a routerLink="/doctor/annual-leaves">Annual leaves</a>
-<a routerLink="/doctor/blood-orders">Blood orders</a>
-<a routerLink="/doctor/blood-consumption">Blood consumption</a>
-<a routerLink="/doctor/consilium">Create consilium</a>
-<a (click)="onLogout()">Logout</a> -->
