--- a/src/app/admin/side-menu/side-menu.component.html
+++ b/src/app/admin/side-menu/side-menu.component.html
@@ -9,6 +9,12 @@
                 <div class="tooltip">Home</div>
             </div>
         </a>
+        <a [routerLink]="['/admin/info']" [hidden]="isHiddenLogout()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Profile icon" fontIcon="person"></mat-icon>
+                <div class="tooltip">Profile</div>
+            </div>
+        </a>
         <a [routerLink]="['/admin/accept-request']" [hidden]="isHiddenLogout()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Home icon" fontIcon="done"></mat-icon>
@@ -27,41 +33,41 @@
                 <div class="tooltip">Create Permission</div>
             </div>
         </a>
-        <a [routerLink]="['/admin/all-employees']" [hidden]="isHiddenLogout()" >
-            <div class="item" >
+        <a [routerLink]="['/admin/all-employees']" [hidden]="isHiddenLogout()">
+            <div class="item">
                 <mat-icon aria-hidden="false" aria-label="All employees" fontIcon="people"></mat-icon>
                 <div class="tooltip">All Employees</div>
             </div>
         </a>
-        <a [routerLink]="['/admin/all-projects']" [hidden]="isHiddenLogout()" >
-            <div class="item" >
+        <a [routerLink]="['/admin/all-projects']" [hidden]="isHiddenLogout()">
+            <div class="item">
                 <mat-icon aria-hidden="false" aria-label="All projects" fontIcon="handyman"></mat-icon>
                 <div class="tooltip">All Projects</div>
             </div>
         </a>
-        
-    
+
+
     </div>
-   <div class="bottom-menu">
-    <a [routerLink]="['/manager']"  [hidden]="isHiddenManager()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Manager"></mat-icon>
-            <div class="tooltip">Manager</div>
-        </div>
-    </a>
-    <a [routerLink]="['/hr']" [hidden]="isHiddenHr()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Hr"></mat-icon>
-            <div class="tooltip">Hr</div>
-        </div>
-    </a>
-    <a [routerLink]="['/engineer']"  [hidden]="isHiddenEngineer()">
-        <div class="item">
-            <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Engineer"></mat-icon>
-            <div class="tooltip">Engineer</div>
-        </div>
-    </a>
-        <a [routerLink]="['/register']" [hidden]="isHiddenLogout()" >
+    <div class="bottom-menu">
+        <a [routerLink]="['/manager']" [hidden]="isHiddenManager()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="Manager"></mat-icon>
+                <div class="tooltip">Manager</div>
+            </div>
+        </a>
+        <a [routerLink]="['/hr']" [hidden]="isHiddenHr()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Hr"></mat-icon>
+                <div class="tooltip">Hr</div>
+            </div>
+        </a>
+        <a [routerLink]="['/engineer']" [hidden]="isHiddenEngineer()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Engineer"></mat-icon>
+                <div class="tooltip">Engineer</div>
+            </div>
+        </a>
+        <a [routerLink]="['/register']" [hidden]="isHiddenLogout()">
             <div class="item">
                 <mat-icon aria-hidden="false" aria-label="Register icon" fontIcon="login"></mat-icon>
                 <div class="tooltip">Register</div>
@@ -79,8 +85,8 @@
                 <div class="tooltip">Logout</div>
             </div>
         </a>
-        
-        
+
+
     </div>
 
 </div>
