--- a/src/app/engineer/profile/profile.component.html
+++ b/src/app/engineer/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile-view">
+<div class="profile-view" *ngIf="isUserLoaded()">
     <div class="wrapper">
         <div class="user-details">
             <h2>User Information</h2>
