--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -1,5 +1,5 @@
-<div class="profile-view">
-    <div class="user-details" *ngIf="isUserLoaded()">
+<div class="profile-view" *ngIf="isUserLoaded()">
+    <div class="user-details">
         <h2>User Information</h2>
         <div class="input-group">
             <label for="username">Username:</label>
