--- a/src/app/admin/all-employees/all-employees.component.html
+++ b/src/app/admin/all-employees/all-employees.component.html
@@ -1,24 +1,49 @@
-<table class="user-table">
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Address</th>
-      <th>Phone number</th>
-      <th>Roles</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let employee of employeeList">
-      <td>{{ employee.username }}</td>
-      <td>{{ employee.firstname }}</td>
-      <td>{{ employee.lastname }}</td>
-      <td>{{ employee.address }} {{employee.city}} {{employee.state}}</td>
-      <td>{{ employee.number}}</td>
-      <td>{{ employee.roles }}</td>
-      <td><button class="change-password-button" (click)="BlockUser(employee.username)">Block</button> </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <div class="button-container">
+    <button class="filter-btn" (click)="openModal()">Filter</button>
+    <button class="filter-btn" (click)="getAllEmployees()">Reset</button>
+  </div>
+
+  <div class="modal" *ngIf="isModalOpen">
+    <h2>Filter Employees</h2>
+    <form [formGroup]="filterForm" class="filter-form">
+      <label for="filterName">Name:</label>
+      <input type="text" id="filterName" formControlName="name">
+
+      <label for="filterSurname">Surname:</label>
+      <input type="text" id="filterSurname" formControlName="surname">
+
+      <label for="filterEmail">Email:</label>
+      <input type="email" id="filterEmail" formControlName="email">
+
+      <label for="filterDayWorking">Day Working:</label>
+      <input type="date" id="filterDayWorking" formControlName="dayWorking">
+
+      <button type="submit" class="filter-btn" (click)="applyFilter()">Apply Filter</button>
+      <button class="filter-btn" (click)="closeModal()">Cancel</button>
+    </form>
+  </div>
+
+  <table class="user-table">
+    <thead>
+      <tr>
+        <th>Email</th>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Address</th>
+        <th>Phone number</th>
+        <th>Roles</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let employee of employeeList">
+        <td>{{ employee.username }}</td>
+        <td>{{ employee.firstname }}</td>
+        <td>{{ employee.lastname }}</td>
+        <td>{{ employee.address }} {{employee.city}} {{employee.state}}</td>
+        <td>{{ employee.number}}</td>
+        <td>{{ employee.roles }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
