Logs on front added

--- a/src/app/admin/side-menu/side-menu.component.html
+++ b/src/app/admin/side-menu/side-menu.component.html
@@ -45,6 +45,12 @@
                 <div class="tooltip">All Projects</div>
             </div>
         </a>
+        <a (click)="dodat()" target="_self" [hidden]="isHiddenLogout()">
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="All loggs" fontIcon="handyman"></mat-icon>
+                <div class="tooltip">Loggs</div>
+            </div>
+        </a>
 
 
     </div>
