--- a/src/app/manager/side-menu/side-menu.component.html
+++ b/src/app/manager/side-menu/side-menu.component.html
@@ -23,6 +23,12 @@
                 <div class="tooltip">Profile</div>
             </div>
         </a>
+        <a [routerLink]="['/change-password']" [hidden]="!isHidden()" >
+            <div class="item">
+                <mat-icon aria-hidden="false" aria-label="Login icon" fontIcon="Change"></mat-icon>
+                <div class="tooltip">Change Password</div>
+            </div>
+        </a>
 
     </div>
     <div class="bottom-menu">
